bsdgames-nonfree (2.17-8) UNRELEASED; urgency=medium

  * NOT RELEASED YET.
  * debian/compat: Advance to Debhelper 11 (from 9).
  * debian/control:
    - Bump debhelper requirement to (>= 11~) accordingly.
    - B-D on libncurses-dev, not transitional libncurses5-dev.

 -- Aaron M. Ucko <ucko@debian.org>  Thu, 28 Feb 2019 22:09:20 -0500

bsdgames-nonfree (2.17-7) unstable; urgency=medium

  * debian/control: Canonicalize with the help of cme fix.  In particular,
    declare Standards-Version: 3.9.8 (already compliant, not that cme checked).
  * debian/copyright: Canonicalize with the help of cme fix.
  * debian/.gitignore: +debhelper-build-stamp.

 -- Aaron M. Ucko <ucko@debian.org>  Wed, 25 Jan 2017 00:09:05 -0500

bsdgames-nonfree (2.17-6) unstable; urgency=low

  * rogue/move.c (check_hunger): Achieve every-other-move effects correctly,
    by consulting m_moves rather than rogue.moves_left.  (Closes: #726195.)
  * Standards-Version: 3.9.4 (already compliant).

 -- Aaron M. Ucko <ucko@debian.org>  Tue, 15 Oct 2013 11:12:31 -0400

bsdgames-nonfree (2.17-5) unstable; urgency=high

  * rogue/init.c: Give the initial bow a damage value of 1d1 for
    consistency with object.c; 1d2 was presumably a typo.
  * rogue/{object.c,rogue.h,save.c}: factor an assign_damage function out
    of gr_weapon, and call it from read_pack because saved values (raw
    pointers to string constants) may be invalid.  (The setup was always
    fragile, and broke altogether when 2.17-4 made the executable
    position-independent and subject to loading at randomized addresses.)
    (Closes: #695262.)

 -- Aaron M. Ucko <ucko@debian.org>  Thu, 06 Dec 2012 21:53:01 -0500

bsdgames-nonfree (2.17-4) unstable; urgency=low

  * config.params: defer to debian/rules for build flags (which weren't
    set quite as intended in noopt mode anyway, per a longstanding typo).
  * debian/compat: Advance to Debhelper 9.
  * debian/control: