@@ -5,8 +5,9 @@ bsdgames-nonfree (2.17-8) UNRELEASED; urgency=medium
   * debian/control:
     - Bump debhelper requirement to (>= 11~) accordingly.
     - B-D on libncurses-dev, not transitional libncurses5-dev.
+  * debian/rules: Take advantage of /usr/share/dpkg/buildflags.mk.
 
- -- Aaron M. Ucko <ucko@debian.org>  Thu, 28 Feb 2019 22:09:20 -0500
+ -- Aaron M. Ucko <ucko@debian.org>  Thu, 28 Feb 2019 22:15:47 -0500
 
 bsdgames-nonfree (2.17-7) unstable; urgency=medium
 
